# VidMemo

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  main.py  models.py  pyproject.toml
backend/routers/: download.py  summary.py
backend/services/: abogus.py  bilibili.py  douyin.py  errors.py  summarizer.py  summary_cache.py  ytdlp.py
backend/tests/: conftest.py  test_bilibili.py  test_preview_stream.py  test_summarizer.py  test_summary_cache.py  test_summary_router.py
docs/: PRD.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-26-preview-download-feature.md  2026-06-07-ai-video-summary.md  2026-06-07-video-preview-e2e.md
docs/superpowers/specs/: 2026-04-25-vidsumai-design.md  2026-06-07-ai-video-summary-design.md  2026-06-07-video-preview-e2e-design.md
frontend/: nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/assets/css/: main.css
frontend/components/: ChatPanel.vue  DownloadInput.vue  MindMap.vue  PlatformList.vue  ProgressTracker.vue  VideoPreview.vue  VideoSummary.vue
frontend/composables/: useExport.ts  usePlaybackState.ts  useSSE.ts
frontend/composables/__tests__/: useExport.spec.ts
frontend/pages/: index.vue
frontend/tests/e2e/: content-export.spec.ts  video-preview.spec.ts  video-summary.spec.ts
frontend/tests/helpers/: backend.ts  player.ts
frontend/types/: index.ts
