[project]
name = "backend"
version = "0.1.0"
description = "VidSumAI backend - FastAPI server for multi-platform video downloading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.0",
    "curl-cffi>=0.10,<0.15",
    "fastapi>=0.136.1",
    "gmssl>=3.2.2",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require real network access to external services",
]
